--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,14 @@
-<h1>My name is <%= @names %></h1>
+<% if @name %>
+  <h1>My name is <%= @name %></h1>
+<% end %>
+
 <div style='border: 5px dotted red'>
   <img src='http://bit.ly/1eze8aE'>
 </div>
+
+<% if !@name %>
+  <form action="/named-cat">
+    <input type="text" name="name">
+    <input type="submit" value="Submit">
+  </form>
+<% end %>
