--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,11 @@
-<h1>My name is <%=["Amigo", "Oscar", "Viking"].sample%></h1>
+<% if @name %>
+<h1>My name is <%= @name %></h1>
+<%end%>
+
+<form action="/named-cat">
+  <input type="text" name="name">
+  <input type="submit" value="name that cat!">
+</form>
 
 <div style="border: 5px dashed red">
 <img src="http://bit.ly/1eze8aE">
