--- a/views/catform.erb
+++ b/views/catform.erb
@@ -1,4 +1,4 @@
-<form action="/named-cat">
-  <input type="text" name="name" method="post">
+<form action="/named-cat" method="post">
+  <input type="text" name="name">
   <input type="submit" value="name that cat!">
 </form>
